 * Don't use Bundler when running as a gem (Dan Lucraft)
 * Parse Ruby with 1.9 syntax instead of 1.8 (Dan Lucraft)
 * Made the auto indenter ignore blank lines when deciding on indentation. (Dan Lucraft)
 * New API for tab context menus (Dan Lucraft)
 * Copy path of file to clipboard tab context menu item (Dan Lucraft)
 * Remember project window location and size, and tree width (Markus Kahl)

Version 0.12 (7th January 2012)
===============================

 * Features run all the way through again, and use Swtbot in places to 
   allow us to simulate events more accurately (Helpful for macros) (Dan Lucraft)
 * Added --no-splash option (Dan Lucraft)
 * Fix runnables for JRuby 1.6.1 (Chris Nelson)
 * Improved developer first experience (Dr Nic Williams)
 * Improved after install instruction language (Jeff Casimir)
 * Added forward char, backward char, and delete char commands (Dan Lucraft)
 * Fixed irritating bugs in the indenter (Dan Lucraft)
 * Pressing enter when between {} will expand the block (Dan Lucraft)
 * Tweak to line numbers so highlighting isn't lost as doc passes 100 lines (Dan Lucraft)
 * Added next line, previous line bindings to Ctrl+N and Ctrl+P (Dan Lucraft)
 * Added open line, transpose characters commands (Dan Lucraft)
 * OSX style unified toolbars (Dan Lucraft)
 * Supports OS X Lion fullscreen mode (Dan Lucraft)
 * Jump back and forward through navigation history (Shinichi Katayama)
 * Added option to add editable ComboItem widgets to Speedbars (Delisa Mason)
 * Updated UI Styling (Delisa Mason)
 * Added option to color tree background color via ApplicationSWT preferences (Delisa Mason)
 * Project tree has colourful icons (Delisa Mason)
 * Uses gems to install everything (Dan Lucraft)
 * Uses Bundler to manage dependencies in development (Dan Lucraft)
 * Wildcards permitted in project search (Delisa Mason)
 * Installation entirely through Rubygems (Dan Lucraft)
 * Rad new icon (Delisa Mason)