@@ -10,7 +10,10 @@ Version 0.13 (TBA)
  * Made the auto indenter ignore blank lines when deciding on indentation. (Dan Lucraft)
  * New API for tab context menus (Dan Lucraft)
  * Copy path of file to clipboard tab context menu item (Dan Lucraft)
- * Remember project window location and size, and tree width (Markus Kahl)
+ * New APIs on Window to get and set window location, size and tree width (Dan Lucraft)
+ * Remember project window location and size, and tree width between sessions (Markus Kahl)
+ * Remember open files between sessions (Christopher Wade)
+ * Remember cursor location and selection between sessions (Christopher Wade)
 
 Version 0.12 (7th January 2012)
 ===============================
